Translation service now uses the handle resolver from CS2-core. Spring context wires a caching version of the API resolver. Removed the old local handle resolver interface and implementation, and adapter the tests. Installation and upgrade instructions have been updated as well. Fixes #3147